# arxiv-researcher

./: .env.sample  .gitignore  Makefile  README.md  TODO  main.py  pyproject.toml
arxiv_researcher/: settings.py
arxiv_researcher/agent/: arxiv_researcher.py  arxiv_searcher.py  evaluator.py  event_emitter.py  goal_evaluator.py  goal_optimizer.py  hearing_optimizer.py  main.py  query_decomposer.py  query_rewrite.py  reporter.py  task_evaluator.py  task_executor.py  user_hearing.py  utility.py
arxiv_researcher/searcher/: arxiv_searcher.py
arxiv_researcher/service/: arxiv_rag.py  pdf_to_markdown.py
arxiv_researcher/ui/: index.py  types.py
